--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -80,6 +80,7 @@
         </androidx.cardview.widget.CardView>
 
         <ScrollView
+            android:id="@+id/home_scroll"
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginStart="8dp"
