--- a/app/src/main/res/layout/upcoming_eval_card.xml
+++ b/app/src/main/res/layout/upcoming_eval_card.xml
@@ -9,35 +9,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="5dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginBottom="4dp"
         android:background="@drawable/upcoming_eval_card_background">
 
         <TextView
-            android:id="@+id/upcoming_eval_dept_code"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="36dp"
-            android:text="@string/course_code"
-            android:textColor="@color/black"
-            app:layout_constraintBottom_toTopOf="@+id/upcoming_eval_course_name"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.3"
-            app:layout_constraintVertical_chainStyle="packed" />
-
-        <TextView
             android:id="@+id/upcoming_eval_course_name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="24dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             android:text="@string/course_name"
             android:textColor="@color/black"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/upcoming_eval_date"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/upcoming_eval_dept_code" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/upcoming_eval_date"
@@ -47,22 +36,19 @@
             android:text="@string/evaluative_date"
             android:textColor="@color/black"
             app:layout_constraintBaseline_toBaselineOf="@+id/upcoming_eval_course_name"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/upcoming_eval_course_name" />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <TextView
             android:id="@+id/upcoming_eval_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
+            android:layout_marginBottom="16dp"
             android:text="@string/evaluative_time"
             android:textColor="@color/black"
-            app:layout_constraintBottom_toBottomOf="@+id/upcoming_eval_dept_code"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toEndOf="@+id/upcoming_eval_dept_code"
-            app:layout_constraintTop_toTopOf="@+id/upcoming_eval_dept_code" />
+            app:layout_constraintTop_toBottomOf="@+id/upcoming_eval_date" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
