--- a/app/src/main/res/layout/evaluatives_card.xml
+++ b/app/src/main/res/layout/evaluatives_card.xml
@@ -13,50 +13,21 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:background="@drawable/evaluative_card_upper_border">
-
-            <TextView
-                android:id="@+id/eval_dept_code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="36dp"
-                android:layout_marginEnd="10dp"
-                android:text="@string/grade_dept_code"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toTopOf="@+id/course_name"
-                app:layout_constraintEnd_toStartOf="@+id/course_code_eval_card"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintHorizontal_chainStyle="packed"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.3"
-                app:layout_constraintVertical_chainStyle="packed" />
-
-            <TextView
-                android:id="@+id/course_code_eval_card"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/grade_course_code"
-                android:textColor="@color/black"
-                app:layout_constraintBaseline_toBaselineOf="@+id/eval_dept_code"
-                app:layout_constraintEnd_toStartOf="@+id/time"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/eval_dept_code"
-                app:layout_constraintVertical_chainStyle="packed" />
 
             <TextView
                 android:id="@+id/course_name"
                 android:layout_width="168dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginTop="16dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/course_name"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/eval_dept_code" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/date"
@@ -77,27 +48,25 @@
                 android:layout_marginEnd="16dp"
                 android:text="@string/evaluative_time"
                 android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="@+id/eval_dept_code"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toEndOf="@+id/eval_dept_code"
-                app:layout_constraintTop_toTopOf="@+id/eval_dept_code" />
+                app:layout_constraintTop_toBottomOf="@+id/date" />
 
-<!--            <ImageView-->
-<!--                android:id="@+id/more_options"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="8dp"-->
-<!--                android:layout_marginEnd="8dp"-->
-<!--                app:layout_constraintEnd_toEndOf="parent"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                app:srcCompat="@drawable/ic_baseline_more_vert_24" />-->
+            <!--            <ImageView-->
+            <!--                android:id="@+id/more_options"-->
+            <!--                android:layout_width="wrap_content"-->
+            <!--                android:layout_height="wrap_content"-->
+            <!--                android:layout_marginTop="8dp"-->
+            <!--                android:layout_marginEnd="8dp"-->
+            <!--                app:layout_constraintEnd_toEndOf="parent"-->
+            <!--                app:layout_constraintTop_toTopOf="parent"-->
+            <!--                app:srcCompat="@drawable/ic_baseline_more_vert_24" />-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
             android:background="@drawable/evaluative_card_lower_border"
             tools:layout_editor_absoluteY="147dp">
 
@@ -130,7 +99,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="8dp"
                 android:text="@string/evaluative_syllabus"
                 android:textColor="@color/black"
@@ -159,19 +128,20 @@
                 android:id="@+id/nature"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginEnd="4dp"
                 android:layout_marginBottom="16dp"
                 android:text="@string/evaluative_nature"
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/nature_value"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/syllabus_description" />
 
             <TextView
                 android:id="@+id/nature_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginBottom="16dp"
@@ -179,32 +149,8 @@
                 android:textColor="@color/black"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/syllabus_description" />
-
-            <TextView
-                android:id="@+id/duration"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/evaluative_duration"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/syllabus_description" />
-
-            <TextView
-                android:id="@+id/duration_value"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
-                android:text="@string/duration_value"
-                android:textColor="@color/black"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/duration"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/nature"
                 app:layout_constraintTop_toBottomOf="@+id/syllabus_description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
