--- a/app/src/main/res/layout/fragment_add_plan.xml
+++ b/app/src/main/res/layout/fragment_add_plan.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -50,31 +51,15 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_title" />
 
-        <CheckBox
-            android:id="@+id/checkBox_repeat_plan"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="24dp"
-            android:text="@string/repeat_plan"
-            android:textColor="@color/app_secondary"
-            app:buttonTint="@color/app_primary"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/editText_name" />
-
         <TextView
             android:id="@+id/textView_date"
             style="@style/form_text_style"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:text="@string/start_date"
             app:layout_constraintEnd_toEndOf="@+id/date_picker"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/date_picker"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_repeat_plan" />
+            app:layout_constraintTop_toBottomOf="@+id/editText_name" />
 
         <EditText
             android:id="@+id/date_picker"
@@ -96,218 +81,14 @@
             app:layout_constraintTop_toBottomOf="@+id/textView_date" />
 
         <TextView
-            android:id="@+id/textView_repeat_on"
-            style="@style/form_text_style"
-            android:layout_marginStart="4dp"
-            android:layout_marginTop="16dp"
-            android:text="@string/repeat_on"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_sun"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_mon"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_repeat_plan" />
-
-        <CheckBox
-            android:id="@+id/checkBox_mon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox_tue"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:layout_constraintStart_toEndOf="@+id/date_picker"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_mon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Mon"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_mon"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_mon"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_mon" />
-
-        <CheckBox
-            android:id="@+id/checkBox_tue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox_wed"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/checkBox_mon"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_tue"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tue"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_tue"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_tue"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_tue" />
-
-        <CheckBox
-            android:id="@+id/checkBox_wed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox_thur"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/checkBox_tue"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_wed"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Wed"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_wed"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_wed"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_wed" />
-
-        <CheckBox
-            android:id="@+id/checkBox_thur"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox_fri"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/checkBox_wed"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_thur"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Thu"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_thur"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_thur"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_thur" />
-
-        <CheckBox
-            android:id="@+id/checkBox_fri"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox_sat"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/checkBox_thur"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_fri"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Fri"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_fri"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_fri"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_fri" />
-
-        <CheckBox
-            android:id="@+id/checkBox_sat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toStartOf="@+id/checkBox_sun"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/checkBox_fri"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_sat"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sat"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_sat"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_sat"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_sat" />
-
-        <CheckBox
-            android:id="@+id/checkBox_sun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:minWidth="0dp"
-            android:minHeight="0dp"
-            app:buttonTint="@color/app_primary"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toEndOf="@+id/checkBox_sat"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_on" />
-
-        <TextView
-            android:id="@+id/textView_sun"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sun"
-            android:textColor="@color/app_secondary"
-            android:textSize="10sp"
-            app:fontFamily="@font/roboto_bold"
-            app:layout_constraintEnd_toEndOf="@+id/checkBox_sun"
-            app:layout_constraintStart_toStartOf="@+id/checkBox_sun"
-            app:layout_constraintTop_toBottomOf="@+id/checkBox_sun" />
-
-        <TextView
-            android:id="@+id/textView_repeat_for"
-            style="@style/form_text_style"
-            android:layout_marginTop="16dp"
-            android:text="@string/repeat_for"
-            app:layout_constraintEnd_toEndOf="@+id/spinner_repeat_for"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="@+id/spinner_repeat_for"
-            app:layout_constraintTop_toBottomOf="@+id/date_picker" />
-
-        <Spinner
-            android:id="@+id/spinner_repeat_for"
-            android:layout_width="208dp"
-            android:layout_height="36dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="4dp"
-            android:background="@drawable/spinner_border"
-            android:entries="@array/repeat_for_entries"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView_repeat_for" />
-
-        <TextView
             android:id="@+id/textView_start_time"
             style="@style/form_text_style"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:text="@string/start_time"
             app:layout_constraintEnd_toEndOf="@+id/spinner_start_time"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@+id/spinner_start_time"
-            app:layout_constraintTop_toBottomOf="@+id/spinner_repeat_for" />
+            app:layout_constraintTop_toBottomOf="@+id/date_picker" />
 
         <EditText
             android:id="@+id/spinner_start_time"
@@ -357,7 +138,7 @@
         <TextView
             android:id="@+id/textView_desc"
             style="@style/form_text_style"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:text="@string/desc"
             app:layout_constraintEnd_toEndOf="@+id/editText_desc"
             app:layout_constraintHorizontal_bias="0.0"
@@ -384,7 +165,7 @@
         <TextView
             android:id="@+id/textView_priority"
             style="@style/form_text_style"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="32dp"
             android:text="@string/priority"
             app:layout_constraintEnd_toEndOf="@+id/spinner_priority"
             app:layout_constraintHorizontal_bias="0.0"
