--- a/app/src/main/res/layout/planner_card.xml
+++ b/app/src/main/res/layout/planner_card.xml
@@ -13,6 +13,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:background="@drawable/evaluative_card_upper_border">
 
             <TextView
@@ -79,6 +80,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/evaluative_card_lower_border"
+            android:layout_marginBottom="4dp"
             tools:layout_editor_absoluteY="147dp">
 
             <TextView
