Minor Bug Fixes

--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -163,9 +163,10 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/current_cg_hint"
-            android:singleLine="true"
+            android:inputType="numberDecimal"
             android:nextFocusDown="@id/credits_completed"
             android:padding="10dp"
+            android:singleLine="true"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/current_sem_spinner"
