--- a/app/src/main/res/layout/fragment_stopwatch_screen.xml
+++ b/app/src/main/res/layout/fragment_stopwatch_screen.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.ridm.eduRIDM.screen.stopwatchscreen.StopwatchScreenViewModel" />
@@ -59,14 +60,14 @@
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:background="@color/app_primary"
+            android:onClick="@{() -> viewModel.onNavigateToHomePageClicked()}"
             app:layout_constraintBottom_toBottomOf="@+id/play_button"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/play_button"
             app:layout_constraintTop_toTopOf="@+id/play_button"
             app:layout_constraintVertical_bias="0.0"
-            app:srcCompat="@drawable/ic_baseline_stop_24"
-            android:onClick="@{() -> viewModel.onNavigateToHomePageClicked()}"/>
+            app:srcCompat="@drawable/ic_baseline_stop_24" />
 
         <ImageButton
             android:id="@+id/music_button"
