--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
-    <item android:id="@+id/settingsFragment"
-        android:title="Settings"
+    <item
+        android:id="@+id/settingsFragment"
         android:icon="@drawable/ic_baseline_settings_24"
-        app:showAsAction="always"/>
-    <item android:id="@+id/profileScreenFragment"
-        android:title="Profile"
+        android:title="Settings"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/profileScreenFragment"
         android:icon="@drawable/ic_baseline_account_circle_24"
-        app:showAsAction="always"/>
+        android:title="Profile"
+        app:showAsAction="always" />
 </menu>
