--- a/app/src/main/res/layout/fragment_add_plan.xml
+++ b/app/src/main/res/layout/fragment_add_plan.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
@@ -43,9 +42,9 @@
             android:background="@drawable/edit_text_border"
             android:ems="10"
             android:hint="@string/name_edittext_hint"
-            android:singleLine="true"
             android:inputType="textPersonName"
             android:paddingStart="20dp"
+            android:singleLine="true"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
