--- a/app/src/main/res/layout/fragment_home_screen.xml
+++ b/app/src/main/res/layout/fragment_home_screen.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.ridm.eduRIDM.screen.homescreen.HomeScreenViewModel" />
@@ -19,14 +20,14 @@
             android:layout_height="85dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="32dp"
+            android:onClick="@{() -> viewModel.onNavigateToStopwatchScreen()}"
             android:translationZ="90dp"
             app:layout_constraintBottom_toBottomOf="@+id/cardView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/cardView"
-            app:srcCompat="@drawable/play_button_home_background"
-            android:onClick="@{() -> viewModel.onNavigateToStopwatchScreen()}"/>
+            app:srcCompat="@drawable/play_button_home_background" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
