--- a/app/src/main/res/layout/fragment_profile_screen.xml
+++ b/app/src/main/res/layout/fragment_profile_screen.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.ridm.eduRIDM.screen.myprofile.ProfileViewModel" />
@@ -129,12 +129,12 @@
             android:layout_marginTop="14dp"
             android:layout_marginEnd="24dp"
             android:backgroundTint="@color/white"
+            android:onClick="@{() -> viewModel.onNavigateToUpdateCGPAClicked()}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/cgpa_header"
             app:layout_constraintTop_toBottomOf="@+id/details_header"
-            app:srcCompat="@drawable/ic_baseline_edit_24"
-            android:onClick="@{() -> viewModel.onNavigateToUpdateCGPAClicked()}"/>
+            app:srcCompat="@drawable/ic_baseline_edit_24" />
 
         <TextView
             android:id="@+id/your_timetable_header"
@@ -149,19 +149,19 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/semester_detail" />
 
-<!--        <ImageButton-->
-<!--            android:id="@+id/edit_timetable"-->
-<!--            android:layout_width="24dp"-->
-<!--            android:layout_height="24dp"-->
-<!--            android:layout_marginStart="8dp"-->
-<!--            android:backgroundTint="@color/white"-->
-<!--            android:onClick="@{() -> viewModel.onNavigateToEditTTClicked()}"-->
-<!--            app:layout_constraintBottom_toBottomOf="@+id/your_timetable_header"-->
-<!--            app:layout_constraintEnd_toStartOf="@+id/add_extra_class"-->
-<!--            app:layout_constraintHorizontal_bias="0.0"-->
-<!--            app:layout_constraintStart_toEndOf="@+id/your_timetable_header"-->
-<!--            app:layout_constraintTop_toTopOf="@+id/your_timetable_header"-->
-<!--            app:srcCompat="@drawable/ic_baseline_edit_24" />-->
+        <!--        <ImageButton-->
+        <!--            android:id="@+id/edit_timetable"-->
+        <!--            android:layout_width="24dp"-->
+        <!--            android:layout_height="24dp"-->
+        <!--            android:layout_marginStart="8dp"-->
+        <!--            android:backgroundTint="@color/white"-->
+        <!--            android:onClick="@{() -> viewModel.onNavigateToEditTTClicked()}"-->
+        <!--            app:layout_constraintBottom_toBottomOf="@+id/your_timetable_header"-->
+        <!--            app:layout_constraintEnd_toStartOf="@+id/add_extra_class"-->
+        <!--            app:layout_constraintHorizontal_bias="0.0"-->
+        <!--            app:layout_constraintStart_toEndOf="@+id/your_timetable_header"-->
+        <!--            app:layout_constraintTop_toTopOf="@+id/your_timetable_header"-->
+        <!--            app:srcCompat="@drawable/ic_baseline_edit_24" />-->
 
         <EditText
             android:id="@+id/date_selector"
@@ -171,15 +171,15 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="32dp"
             android:background="@drawable/edit_text_border"
+            android:clickable="false"
+            android:cursorVisible="false"
             android:drawableEnd="@drawable/calender_icon"
             android:ems="10"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
             android:hint="@string/select_date_hint"
             android:padding="10dp"
             android:textSize="14sp"
-            android:clickable="false"
-            android:cursorVisible="false"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/your_timetable_header" />
