--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="viewModel"
             type="com.ridm.eduRIDM.screen.onboarding.RegisterViewModel" />
@@ -69,9 +70,9 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/your_name_hint"
-            android:singleLine="true"
             android:nextFocusDown="@id/id_edit_text"
             android:padding="10dp"
+            android:singleLine="true"
             android:textSize="14sp"
             app:layout_constraintBottom_toTopOf="@+id/your_id_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -98,8 +99,8 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/college_id_hint"
-            android:singleLine="true"
             android:padding="10dp"
+            android:singleLine="true"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -139,8 +140,8 @@
             android:layout_height="36dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="4dp"
-            android:entries="@array/semester_entries"
             android:background="@drawable/spinner_border"
+            android:entries="@array/semester_entries"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/current_semester_text" />
 
@@ -192,8 +193,9 @@
             android:background="@drawable/edit_text_border"
             android:fontFamily="@font/roboto_bold"
             android:hint="@string/num_creds_hint"
-            android:singleLine="true"
+            android:inputType="numberDecimal"
             android:padding="10dp"
+            android:singleLine="true"
             android:textSize="14sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
@@ -205,7 +207,7 @@
             style="@style/form_button_style"
             android:text="@string/button_next"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
